--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "sequelize": "^6.20.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
