--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.27.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sequelize": "^6.20.1",
     "web-vitals": "^0.2.4"
   },
